--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,6 @@
 .header {
+    width: 93%;
+    max-width: 1600px;
     background-color: black;
     display: flex;
     justify-content: space-between;
@@ -20,6 +22,6 @@
 
 @media screen and (max-width: 576px) {
     .header {
-        width: 90%;
+        width: 100%;
     }
 }
