--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
+  max-width: 1600px;
+  margin: auto;
   min-width: 320px;
   min-height: 100vh;
 }
