--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -20,6 +20,17 @@
     color: orange;
 }
 
+.header div {
+    display: flex !important;
+    align-items: center;
+}
+
+.header p {
+    color: red;
+    margin-right: 10px;
+}
+
+
 @media screen and (max-width: 576px) {
     .header {
         width: 100%;
